--- a/test.html
+++ b/test.html
@@ -1,14 +1,13 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="test.css">
   <script src="http://requirejs.org/docs/release/2.3.2/comments/require.js"></script>
 </head>
 <body>
 
-<table class="table" id="myTable">
+<table class="table data" id="myTable">
   <thead>
     <tr>
-      <th>#</th>
-      <th>Data</th>
     </tr>
   </thead>
   <tbody>
@@ -28,17 +27,69 @@
     });
 
     require(["jquery"], function($) {
-        $( document ).ready( () => $.ajax({
-              url: 'arrays.txt',
+       var columns = 
+        [
+          "ID",
+          "Артикул",
+          "Поставщик",
+          "Бренд",
+          "Название",
+          "Единица измерения",
+          "Базовая цена",
+          "Цена",
+          "Страна",
+          "Коллекция",
+          "Класс нагрузки",
+          "Фаска",
+          "Эффекты",
+          "Размер планки, мм",
+          "Планок в упаковке, шт",
+          "Вес упаковки",
+          "Кратность отгрузки, кв.м",
+          "Структура поверхности",
+          "Формат панели",
+          "Тип соединения",
+          "Защита от разбухания",
+          "Пропитка кантов по периметру",
+          "Антистатическое покрытие",
+          "Наличие подложки",
+          "Цвет",
+          "Площадь планки",
+          {name: "Картинка", present: (url) => $("<img/>").attr("src",url) }
+        ];
+
+        function getname(column) {
+          return column.name ? column.name : column;
+        }
+
+        $( document ).ready( () => {
+
+            var tr = $('#myTable thead tr');
+            tr.append('<th>#</th>');
+            columns.forEach(column => tr.append($("<th/>").text(getname(column))));
+
+            $.ajax({
+              url: 'data.json',
               dataType : "json",                     
               success: function (result, textStatus) { 
-                  result.data.forEach(function(val, i) {   
-                      var tr = $('#myTable tbody').append('<tr/>');
-                      tr.append($("<th scope='row'/>").text(i));
-                      tr.append($('<td/>').text(val[0]));
+                  result.forEach(function(row, i) {   
+                      if (i>=10) return;               //todo proper pagination
+
+                      var tr = $('<tr/>').appendTo($('#myTable tbody'));
+                      tr.append($("<th scope='row'/>").text(i+1));
+                      columns.forEach(column => {
+                        var td = $("<td/>").appendTo(tr);
+                        var value = row[getname(column)];
+                        if (!column.present) {
+                          td.text(value);
+                        } else {
+                          td.append(column.present(value));
+                        }
+                      });
                   });
               } 
-        }));
+            });
+        });
     });
 </script>
 
