--- a/test.html
+++ b/test.html
@@ -1,10 +1,12 @@
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="test.css">
   <script src="http://requirejs.org/docs/release/2.3.2/comments/require.js"></script>
 </head>
 <body>
 
+<p class="debug" id="urldebug"></p>
+<div class="table-responsive">
 <table class="table data" id="myTable">
   <thead>
     <tr>
@@ -13,6 +15,13 @@
   <tbody>
   </tbody>
 </table>
+</div>
+
+<div class="col-md-12 text-center">
+<nav>
+  <ul class="pagination"/>
+</nav>
+</div>
 
 <script>
     requirejs.config({
@@ -22,7 +31,7 @@
         paths: {
             "jquery" : "https://code.jquery.com/jquery-3.1.1.min",
             "tether" : "https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min",
-            "bootstrap" :  "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min",
+            "bootstrap" :  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min",
             "main" : "test"
         }
     });
