Tile mode, дичайше todo для него иное кол-во элементов на страницу адово

--- a/test.html
+++ b/test.html
@@ -17,9 +17,16 @@
 </table>
 </div>
 
+<div class = "row" id="myTiles">
+</div>
+
 <div class="col-md-12 text-center">
+<ul class="pagination pull-left">
+  <li class="page-item view-mode view-list"><a class="page-link" href = "#"><span class="glyphicon glyphicon-th-list"></span></a></li>
+  <li class="page-item view-mode view-tiles"><a class="page-link" href = "#"><span class="glyphicon glyphicon-th"></span></a></li>
+</ul>
 <nav>
-  <ul class="pagination"/>
+  <ul class="pagination tablepages"/>
 </nav>
 </div>
 
