--- a/test.html
+++ b/test.html
@@ -38,7 +38,8 @@
         paths: {
             "jquery" : "https://code.jquery.com/jquery-3.1.1.min",
             "tether" : "https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min",
-            "bootstrap" :  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min",
+            "bootstrap" : "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min",
+            "test-data" : "test-data",
             "main" : "test"
         }
     });
