Turned out, I need either constant height tiles or clearfixes to avoid screwing the layout on resize. I choose to fixate height (and the cause of its variation was the tile caption).

--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@
 <script id="sampleTile" type="text/x-handlebars-template">
               <div class = "col-sm-4 col-md-3 col-lg-2">
                   <div class = "thumbnail"><img src="{{Картинка}}"/></div>
-                  <div class = "caption text-center"><h3>{{Название}}</h3></div>
+                  <div class = "caption text-center">{{Название}}</div>
                   <p>Цена: {{Цена}}</p><p>Класс нагрузки: {{"Класс нагрузки"}}</p><p>Фаска: {{Фаска}}</p>
               </div>
 </script>
